--- a/trading/introduction.mdx
+++ b/trading/introduction.mdx
@@ -1,14 +1,14 @@
 ---
-title: 'Welcome to Stock Trading'
-description: 'Your comprehensive guide to stock trading in US and Vietnam markets'
+title: 'Complete Guide to Stock Market Investing'
+description: 'Master the fundamentals of stock market investing from beginner to advanced concepts'
 icon: 'chart-line'
 ---
 
-<div className="flex items-center gap-2 mb-6 text-sm text-gray-600">
+<div className="flex items-center gap-2 mb-6 text-sm text-slate-500">
   <Icon icon="clock" size={16} />
-  <span>8 min read</span>
+  <span>15 min read</span>
   <span>•</span>
-  <span>Last updated: December 2024 by Quoc Doan</span>
+  <span>Last updated: July 2025</span>
 </div>
 
 <Frame>
@@ -24,30 +24,166 @@ icon: 'chart-line'
   />
 </Frame>
 
-<Card title="What You'll Learn" icon="target" color="#6b7280">
-  **Comprehensive Trading Education**: Master fundamental and technical analysis, risk management, portfolio construction, and market psychology for both US and Vietnam equity markets.
+<Card title="What You'll Master" icon="target" color="#6b7280">
+  **Complete Investment Education**: Learn everything from basic stock concepts to advanced portfolio management, technical analysis, risk assessment, and market psychology. This guide transforms absolute beginners into informed investors.
 </Card>
 
-## Global Market Overview
+## What Is Stock Market Investing? A Complete Foundation
 
-Understanding the scale and characteristics of major financial markets is essential for informed investment decisions. Each market has unique features, regulations, and opportunities.
+Stock market investing is the process of buying shares (partial ownership) in publicly traded companies with the expectation that their value will increase over time. When you buy a stock, you become a shareholder and own a tiny piece of that business, entitled to a proportional share of its profits and assets.
+
+### Why Companies Issue Stock
+
+Companies sell shares to the public to raise capital for growth, expansion, research and development, or debt reduction. Instead of taking loans that require interest payments, companies can sell ownership stakes to investors who provide funding in exchange for potential future profits.
+
+### How Stock Prices Are Determined
+
+Stock prices are determined by supply and demand in the marketplace, influenced by:
+
+**Company Fundamentals**: Revenue growth, profitability, debt levels, competitive position, and management quality.
+
+**Market Sentiment**: Investor emotions, news coverage, analyst recommendations, and overall economic outlook.
+
+**Economic Factors**: Interest rates, inflation, unemployment, GDP growth, and government policies.
+
+**Industry Trends**: Sector-specific developments, technological disruptions, and regulatory changes.
+
+### Types of Investment Returns
+
+**Capital Appreciation**: The increase in stock price from when you buy to when you sell. If you buy at $50 and sell at $75, you've earned $25 per share.
+
+**Dividends**: Regular cash payments some companies make to shareholders, typically quarterly. A 3% dividend yield means you receive $3 annually for every $100 invested.
+
+**Compound Growth**: The exponential growth that occurs when your investment returns generate their own returns over time.
+
+## Understanding Different Market Structures
+
+### Primary vs. Secondary Markets
+
+**Primary Market**: Where companies first sell new shares to the public through Initial Public Offerings (IPOs). You're buying directly from the company.
+
+**Secondary Market**: Where existing shares are traded between investors. This is what most people think of as "the stock market" - NYSE, NASDAQ, etc.
+
+### Market Participants and Their Roles
+
+**Retail Investors**: Individual investors like you and me, typically investing personal savings for long-term goals.
+
+**Institutional Investors**: Large organizations like pension funds, mutual funds, and insurance companies that manage billions of dollars.
+
+**Market Makers**: Firms that provide liquidity by continuously buying and selling stocks, ensuring there's always someone to trade with.
+
+**Algorithmic Traders**: Computer programs that execute trades based on mathematical models and market patterns.
+
+## Global Market Overview and Opportunities
+
+Understanding global financial markets is crucial for modern investors. Each market offers unique opportunities, risks, and characteristics that can enhance your investment portfolio through diversification.
 
 <div className="grid grid-cols-1 md:grid-cols-2 gap-6 my-8">
-  <div className="bg-slate-900 p-6 rounded-xl text-white shadow-lg border border-slate-800">
+  <div className="p-6 rounded-xl border border-slate-700">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-8 h-8 bg-slate-700 rounded-lg flex items-center justify-center">
-        <span className="text-lg"></span>
+      <div className="w-8 h-8 bg-slate-600 rounded-lg flex items-center justify-center">
+        <span className="text-slate-200 font-bold">US</span>
       </div>
-      <h3 className="text-xl font-bold text-white">US Markets (NYSE, NASDAQ)</h3>
+      <h3 className="text-xl font-bold text-slate-200">US Markets (NYSE, NASDAQ)</h3>
     </div>
     <div className="space-y-3">
       <div className="flex justify-between items-center bg-slate-800/50 p-3 rounded-lg border border-slate-700">
         <span className="text-slate-300">Total Market Cap</span>
-        <span className="font-bold text-lg text-white">$45+ Trillion</span>
+        <span className="font-bold text-lg text-slate-200">$45+ Trillion</span>
       </div>
       <div className="flex justify-between items-center bg-slate-800/50 p-3 rounded-lg border border-slate-700">
         <span className="text-slate-300">Daily Volume</span>
-        <span className="font-bold text-lg text-white">$200+ Billion</span>
+        <span className="font-bold text-lg text-slate-200">$200+ Billion</span>
+      </div>
+      <div className="flex justify-between items-center bg-slate-800/50 p-3 rounded-lg border border-slate-700">
+        <span className="text-slate-300">Listed Companies</span>
+        <span className="font-bold text-lg text-slate-200">7,000+</span>
+      </div>
+    </div>
+    <div className="mt-4 text-sm text-slate-400">
+      <p><strong>Advantages:</strong> Highest liquidity, strong regulations, global companies</p>
+      <p><strong>Access:</strong> Available to international investors through most brokers</p>
+    </div>
+  </div>
+
+  <div className="p-6 rounded-xl border border-slate-700">
+    <div className="flex items-center gap-3 mb-4">
+      <div className="w-8 h-8 bg-slate-600 rounded-lg flex items-center justify-center">
+        <span className="text-slate-200 font-bold">VN</span>
+      </div>
+      <h3 className="text-xl font-bold text-slate-200">Vietnam Markets (HOSE, HNX)</h3>
+    </div>
+    <div className="space-y-3">
+      <div className="flex justify-between items-center bg-slate-800/50 p-3 rounded-lg border border-slate-700">
+        <span className="text-slate-300">Total Market Cap</span>
+        <span className="font-bold text-lg text-slate-200">$200+ Billion</span>
+      </div>
+      <div className="flex justify-between items-center bg-slate-800/50 p-3 rounded-lg border border-slate-700">
+        <span className="text-slate-300">Daily Volume</span>
+        <span className="font-bold text-lg text-slate-200">$500+ Million</span>
+      </div>
+      <div className="flex justify-between items-center bg-slate-800/50 p-3 rounded-lg border border-slate-700">
+        <span className="text-slate-300">Listed Companies</span>
+        <span className="font-bold text-lg text-slate-200">1,500+</span>
+      </div>
+    </div>
+    <div className="mt-4 text-sm text-slate-400">
+      <p><strong>Advantages:</strong> Emerging market growth, lower valuations, local opportunities</p>
+      <p><strong>Access:</strong> Requires local broker or international platforms with VN access</p>
+    </div>
+  </div>
+</div>
+
+### Why Market Diversification Matters
+
+**Geographic Diversification**: Different countries' economies don't always move in sync. When US markets decline, emerging markets might outperform, and vice versa.
+
+**Currency Exposure**: International investments provide exposure to different currencies, which can serve as a hedge against domestic currency weakness.
+
+**Growth Opportunities**: Emerging markets like Vietnam often offer higher growth potential as their economies develop and modernize.
+
+**Valuation Differences**: Markets trade at different valuations, allowing you to find better values in less popular regions.
+
+## Investment Account Types: Choosing the Right Foundation
+
+The type of account you choose significantly impacts your investment returns through tax implications and contribution limits.
+
+### Tax-Advantaged Accounts (US)
+
+**401(k) - Employer-Sponsored Retirement**
+- **2025 Contribution Limit**: $23,500 ($31,000 if 50+)
+- **Tax Treatment**: Traditional (pre-tax contributions, taxed in retirement) or Roth (after-tax contributions, tax-free withdrawals)
+- **Employer Match**: Free money - always contribute enough to get the full match
+- **Withdrawal Rules**: Penalties for early withdrawal before age 59½
+
+**IRA (Individual Retirement Account)**
+- **2025 Contribution Limit**: $7,000 ($8,000 if 50+)
+- **Traditional IRA**: Tax-deductible contributions, taxed withdrawals in retirement
+- **Roth IRA**: After-tax contributions, tax-free growth and withdrawals
+- **Income Limits**: High earners may not qualify for full Roth IRA contributions
+
+**HSA (Health Savings Account)**
+- **Triple Tax Advantage**: Deductible contributions, tax-free growth, tax-free withdrawals for medical expenses
+- **2025 Limits**: $4,300 individual, $8,550 family
+- **Investment Option**: After building cash balance, can invest in stocks/bonds
+- **Retirement Use**: Functions like traditional IRA after age 65 for non-medical expenses
+
+### Taxable Investment Accounts
+
+**Brokerage Accounts**
+- **No Contribution Limits**: Invest as much as you want
+- **Tax Implications**: Pay taxes on dividends annually and capital gains when you sell
+- **Liquidity**: Access your money anytime without penalties
+- **Tax-Loss Harvesting**: Can offset gains with losses to reduce taxes
+
+### Account Selection Strategy
+
+1. **Emergency Fund**: High-yield savings account (3-6 months expenses)
+2. **Employer 401(k)**: Contribute enough to get full match
+3. **High-Interest Debt**: Pay off credit cards and high-rate loans
+4. **Roth IRA**: Max out if eligible ($7,000/year)
+5. **Max 401(k)**: Increase to contribution limit if possible
+6. **Taxable Account**: For additional investments and shorter-term goals
       </div>
       <div className="flex justify-between items-center bg-slate-800/50 p-3 rounded-lg border border-slate-700">
         <span className="text-white/90">Listed Companies</span>
