--- a/trading/market-fundamentals.mdx
+++ b/trading/market-fundamentals.mdx
@@ -1,25 +1,66 @@
 ---
-title: 'Market Fundamentals'
-description: 'Essential market concepts, performance analysis, and trading psychology basics'
+title: 'Market Fundamentals: Building Your Investment Foundation'
+description: 'Master essential market concepts, sector analysis, economic indicators, and market psychology for successful investing'
 icon: 'chart-line'
 ---
 
-<div className="flex items-center gap-2 mb-6 text-sm text-slate-500 dark:text-slate-400">
+<div className="flex items-center gap-2 mb-6 text-sm text-slate-500 ">
   <Icon icon="clock" size={16} />
-  <span>6 min read</span>
+  <span>20 min read</span>
   <span>•</span>
-  <span>Last updated: July 2025</span>
+  <span>Comprehensive Guide</span>
+  <span>•</span>
+  <span>Last updated: January 2025</span>
 </div>
 
-## Market Sectors Performance (YTD)
+<div className="bg-slate-900 p-8 rounded-xl border border-slate-800 my-8">
+  <div className="flex items-center gap-4 mb-6">
+    <div className="w-12 h-12 bg-slate-700 rounded-xl flex items-center justify-center">
+      <Icon icon="chart-line" size={24} className="text-white" />
+    </div>
+    <div>
+      <h1 className="text-2xl font-bold text-slate-100">Understanding Market Fundamentals</h1>
+      <p className="text-slate-400">Essential concepts every investor needs to master</p>
+    </div>
+  </div>
 
-<div className="bg-gray-50">
-  <div className="border-b border-slate-200 dark:border-slate-700 bg-white/50 dark:bg-slate-800/50">
+  <div className="space-y-4 text-slate-300">
+    <p className="text-lg leading-relaxed">
+      Market fundamentals form the bedrock of successful investing. These core concepts help you understand how markets work, why prices move, and how to make informed investment decisions based on economic reality rather than speculation.
+    </p>
+
+    <div className="bg-slate-800 p-4 rounded-lg border border-slate-700">
+      <h4 className="text-slate-200 font-semibold mb-2">What You'll Learn</h4>
+      <p className="text-sm">
+        This comprehensive guide covers sector analysis, economic indicators, market cycles, and the psychological factors that drive market movements. Master these fundamentals to invest with confidence and clarity.
+      </p>
+    </div>
+  </div>
+</div>
+
+## Market Sectors: The Building Blocks of the Economy
+
+<div className="bg-slate-900 p-6 rounded-xl border border-slate-800 mb-8">
+  <h3 className="text-xl font-bold text-slate-100 mb-4">Understanding Sector Rotation</h3>
+  <p className="text-slate-300 mb-4">
+    The stock market is divided into 11 major sectors, each responding differently to economic conditions. Understanding sector rotation—the movement of investment capital from one sector to another—can significantly improve your investment timing and returns.
+  </p>
+
+  <div className="bg-slate-800 p-4 rounded-lg border border-slate-700">
+    <h4 className="text-slate-200 font-semibold mb-2">Why Sector Analysis Matters</h4>
+    <p className="text-slate-400 text-sm">
+      Different sectors thrive at different points in the economic cycle. Technology may lead during expansion, while utilities often outperform during contractions. Smart investors adjust their sector allocation based on economic conditions.
+    </p>
+  </div>
+</div>
+
+<div className="bg-slate-900">
+  <div className="border-b border-slate-200   dark:bg-slate-800/50">
     <div className="flex">
-      <button className="flex-1 px-6 py-4 text-sm font-medium text-gray-600 dark:text-gray-400 bg-gray-50 dark:bg-gray-900/30 border-b-2 border-gray-500">
+      <button className="flex-1 px-6 py-4 text-sm font-medium text-slate-300  bg-slate-900  border-b-2 border-slate-600">
         Best Performers
       </button>
-      <button className="flex-1 px-6 py-4 text-sm font-medium text-slate-600 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800/50">
+      <button className="flex-1 px-6 py-4 text-sm font-medium text-slate-600  hover:bg-slate-50 ">
         Laggards
       </button>
     </div>
@@ -27,63 +68,63 @@ icon: 'chart-line'
 
   <div className="p-6">
     <div className="space-y-4">
-      <div className="flex items-center justify-between p-4 bg-gray-50 dark:bg-gray-900/20 rounded-lg border border-gray-200 dark:border-gray-800">
+      <div className="flex items-center justify-between p-4 bg-slate-900  rounded-lg border border-slate-800 ">
         <div className="flex items-center gap-3">
-          <div className="w-10 h-10 bg-gray-500 rounded-lg flex items-center justify-center">
+          <div className="w-10 h-10 bg-slate-700 rounded-lg flex items-center justify-center">
             <span className="text-white text-sm font-bold">T</span>
           </div>
           <div>
-            <div className="font-semibold text-gray-900 dark:text-gray-100">Technology</div>
-            <div className="text-sm text-gray-700 dark:text-gray-300">AI Revolution, Cloud Growth</div>
+            <div className="font-semibold text-slate-100 ">Technology</div>
+            <div className="text-sm text-slate-300 ">AI Revolution, Cloud Growth</div>
           </div>
         </div>
         <div className="text-right">
-          <div className="text-xl font-bold text-gray-600 dark:text-gray-400">+28.5%</div>
+          <div className="text-xl font-bold text-slate-300 ">+28.5%</div>
         </div>
       </div>
 
-      <div className="flex items-center justify-between p-4 bg-gray-50 dark:bg-gray-900/20 rounded-lg border border-gray-200 dark:border-gray-800">
+      <div className="flex items-center justify-between p-4 bg-slate-900  rounded-lg border border-slate-800 ">
         <div className="flex items-center gap-3">
-          <div className="w-10 h-10 bg-gray-500 rounded-lg flex items-center justify-center">
+          <div className="w-10 h-10 bg-slate-700 rounded-lg flex items-center justify-center">
             <span className="text-white text-sm font-bold">C</span>
           </div>
           <div>
-            <div className="font-semibold text-gray-900 dark:text-gray-100">Communication</div>
-            <div className="text-sm text-gray-700 dark:text-gray-300">5G Expansion, Streaming</div>
+            <div className="font-semibold text-slate-100 ">Communication</div>
+            <div className="text-sm text-slate-300 ">5G Expansion, Streaming</div>
           </div>
         </div>
         <div className="text-right">
-          <div className="text-xl font-bold text-gray-600 dark:text-gray-400">+22.1%</div>
+          <div className="text-xl font-bold text-slate-300 ">+22.1%</div>
         </div>
       </div>
 
-      <div className="flex items-center justify-between p-4 bg-gray-50 dark:bg-gray-900/20 rounded-lg border border-gray-200 dark:border-gray-800">
+      <div className="flex items-center justify-between p-4 bg-slate-900  rounded-lg border border-slate-800 ">
         <div className="flex items-center gap-3">
-          <div className="w-10 h-10 bg-gray-500 rounded-lg flex items-center justify-center">
+          <div className="w-10 h-10 bg-slate-700 rounded-lg flex items-center justify-center">
             <span className="text-white text-sm font-bold">CD</span>
           </div>
           <div>
-            <div className="font-semibold text-gray-900 dark:text-gray-100">Consumer Discretionary</div>
-            <div className="text-sm text-gray-700 dark:text-gray-300">Economic Recovery</div>
+            <div className="font-semibold text-slate-100 ">Consumer Discretionary</div>
+            <div className="text-sm text-slate-300 ">Economic Recovery</div>
           </div>
         </div>
         <div className="text-right">
-          <div className="text-xl font-bold text-gray-600 dark:text-gray-400">+18.7%</div>
+          <div className="text-xl font-bold text-slate-300 ">+18.7%</div>
         </div>
       </div>
 
-      <div className="flex items-center justify-between p-4 bg-gray-50 dark:bg-gray-900/20 rounded-lg border border-gray-200 dark:border-gray-800">
+      <div className="flex items-center justify-between p-4 bg-slate-900  rounded-lg border border-slate-800 ">
         <div className="flex items-center gap-3">
-          <div className="w-10 h-10 bg-gray-500 rounded-lg flex items-center justify-center">
+          <div className="w-10 h-10 bg-slate-700 rounded-lg flex items-center justify-center">
             <span className="text-white text-sm font-bold">F</span>
           </div>
           <div>
-            <div className="font-semibold text-gray-900 dark:text-gray-100">Financials</div>
-            <div className="text-sm text-gray-700 dark:text-gray-300">Rising Interest Rates</div>
+            <div className="font-semibold text-slate-100 ">Financials</div>
+            <div className="text-sm text-slate-300 ">Rising Interest Rates</div>
           </div>
         </div>
         <div className="text-right">
-          <div className="text-xl font-bold text-gray-600 dark:text-gray-400">+15.3%</div>
+          <div className="text-xl font-bold text-slate-300 ">+15.3%</div>
         </div>
       </div>
     </div>
@@ -95,38 +136,38 @@ icon: 'chart-line'
 <div className="my-8">
   <h3 className="text-lg font-semibold text-slate-800 dark:text-slate-200 mb-4">Daily Trading Patterns</h3>
 
-  <div className="bg-gradient-to-r bg-gray-50 dark:bg-gray-900/20 p-6 rounded-xl border border-gray-200 dark:border-gray-800">
+  <div className="bg-gradient-to-r bg-slate-900  p-6 rounded-xl border border-slate-800 ">
     <div className="relative">
       {/* Mermaid chart representation with modern styling */}
       <div className="flex items-end justify-between h-32 space-x-2">
         <div className="flex flex-col items-center">
           <div className="w-8 h-24 bg-gradient-to-t from-indigo-500 to-indigo-400 rounded-t"></div>
-          <div className="text-xs text-slate-600 dark:text-slate-400 mt-2">9:30 AM</div>
+          <div className="text-xs text-slate-600  mt-2">9:30 AM</div>
           <div className="text-xs text-slate-500 dark:text-slate-500">Opening</div>
         </div>
         <div className="flex flex-col items-center">
           <div className="w-8 h-16 bg-gradient-to-t from-blue-500 to-blue-400 rounded-t"></div>
-          <div className="text-xs text-slate-600 dark:text-slate-400 mt-2">10:30 AM</div>
+          <div className="text-xs text-slate-600  mt-2">10:30 AM</div>
           <div className="text-xs text-slate-500 dark:text-slate-500">Morning</div>
         </div>
         <div className="flex flex-col items-center">
           <div className="w-8 h-8 bg-gradient-to-t from-slate-400 to-slate-300 rounded-t"></div>
-          <div className="text-xs text-slate-600 dark:text-slate-400 mt-2">12:00 PM</div>
+          <div className="text-xs text-slate-600  mt-2">12:00 PM</div>
           <div className="text-xs text-slate-500 dark:text-slate-500">Lunch</div>
         </div>
         <div className="flex flex-col items-center">
           <div className="w-8 h-16 bg-gradient-to-t from-emerald-500 to-emerald-400 rounded-t"></div>
-          <div className="text-xs text-slate-600 dark:text-slate-400 mt-2">2:00 PM</div>
+          <div className="text-xs text-slate-600  mt-2">2:00 PM</div>
           <div className="text-xs text-slate-500 dark:text-slate-500">Afternoon</div>
         </div>
         <div className="flex flex-col items-center">
           <div className="w-8 h-20 bg-gradient-to-t from-purple-500 to-purple-400 rounded-t"></div>
-          <div className="text-xs text-slate-600 dark:text-slate-400 mt-2">3:00 PM</div>
+          <div className="text-xs text-slate-600  mt-2">3:00 PM</div>
           <div className="text-xs text-slate-500 dark:text-slate-500">Power Hour</div>
         </div>
         <div className="flex flex-col items-center">
           <div className="w-8 h-12 bg-gradient-to-t from-red-500 to-red-400 rounded-t"></div>
-          <div className="text-xs text-slate-600 dark:text-slate-400 mt-2">4:00 PM</div>
+          <div className="text-xs text-slate-600  mt-2">4:00 PM</div>
           <div className="text-xs text-slate-500 dark:text-slate-500">Close</div>
         </div>
       </div>
@@ -134,16 +175,16 @@ icon: 'chart-line'
 
     <div className="mt-6 grid grid-cols-2 md:grid-cols-3 gap-4 text-sm">
       <div className="flex items-center gap-2">
-        <div className="w-3 h-3 bg-gray-500 rounded"></div>
-        <span className="text-slate-700 dark:text-slate-300">High Volume Periods</span>
+        <div className="w-3 h-3 bg-slate-700 rounded"></div>
+        <span className="text-slate-700 ">High Volume Periods</span>
       </div>
       <div className="flex items-center gap-2">
         <div className="w-3 h-3 bg-slate-400 rounded"></div>
-        <span className="text-slate-700 dark:text-slate-300">Low Volume Periods</span>
+        <span className="text-slate-700 ">Low Volume Periods</span>
       </div>
       <div className="flex items-center gap-2">
-        <div className="w-3 h-3 bg-gray-500 rounded"></div>
-        <span className="text-slate-700 dark:text-slate-300">Moderate Volume</span>
+        <div className="w-3 h-3 bg-slate-700 rounded"></div>
+        <span className="text-slate-700 ">Moderate Volume</span>
       </div>
     </div>
   </div>
@@ -157,43 +198,43 @@ icon: 'chart-line'
 
     <div className="space-y-8">
       <div className="flex gap-6">
-        <div className="w-8 h-8 bg-gray-500 rounded-full flex items-center justify-center flex-shrink-0 relative z-10">
+        <div className="w-8 h-8 bg-slate-700 rounded-full flex items-center justify-center flex-shrink-0 relative z-10">
           <svg className="w-4 h-4 text-white" fill="currentColor" viewBox="0 0 20 20">
             <path fillRule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM9.555 7.168A1 1 0 008 8v4a1 1 0 001.555.832l3-2a1 1 0 000-1.664l-3-2z" clipRule="evenodd" />
           </svg>
         </div>
-        <div className="flex-1 bg-gray-50 dark:bg-gray-900/20 border border-gray-200 dark:border-gray-800 rounded-xl p-6">
+        <div className="flex-1 bg-slate-900  border border-slate-800  rounded-xl p-6">
           <h4 className="font-bold text-gray-800 dark:text-gray-200 mb-2">Priority #1: Emergency Fund (Month 1-3)</h4>
-          <p className="text-gray-700 dark:text-gray-300 mb-3">Save 3-6 months of expenses in high-yield savings account (4-5% APY)</p>
+          <p className="text-slate-300  mb-3">Save 3-6 months of expenses in high-yield savings account (4-5% APY)</p>
           <div className="bg-white/70 dark:bg-slate-800/70 p-3 rounded-lg">
-            <span className="font-semibold text-gray-900 dark:text-gray-100">Recommended Amount:</span>
-            <span className="text-gray-700 dark:text-gray-300"> $15,000 - $30,000 for most individuals</span>
+            <span className="font-semibold text-slate-100 ">Recommended Amount:</span>
+            <span className="text-slate-300 "> $15,000 - $30,000 for most individuals</span>
           </div>
         </div>
       </div>
 
       <div className="flex gap-6">
-        <div className="w-8 h-8 bg-gray-500 rounded-full flex items-center justify-center flex-shrink-0 relative z-10">
+        <div className="w-8 h-8 bg-slate-700 rounded-full flex items-center justify-center flex-shrink-0 relative z-10">
           <svg className="w-4 h-4 text-white" fill="currentColor" viewBox="0 0 20 20">
             <path d="M4 4a2 2 0 00-2 2v1h16V6a2 2 0 00-2-2H4z" />
             <path fillRule="evenodd" d="M18 9H2v5a2 2 0 002 2h12a2 2 0 002-2V9zM4 13a1 1 0 011-1h1a1 1 0 110 2H5a1 1 0 01-1-1zm5-1a1 1 0 100 2h1a1 1 0 100-2H9z" clipRule="evenodd" />
           </svg>
         </div>
-        <div className="flex-1 bg-gray-50 dark:bg-gray-900/20 border border-gray-200 dark:border-gray-800 rounded-xl p-6">
+        <div className="flex-1 bg-slate-900  border border-slate-800  rounded-xl p-6">
           <h4 className="font-bold text-gray-800 dark:text-gray-200 mb-2">Priority #2: High-Interest Debt (Month 1-6)</h4>
-          <p className="text-gray-700 dark:text-gray-300">Pay off credit cards (18-25% interest) before investing in stocks (8-10% expected)</p>
+          <p className="text-slate-300 ">Pay off credit cards (18-25% interest) before investing in stocks (8-10% expected)</p>
         </div>
       </div>
 
       <div className="flex gap-6">
-        <div className="w-8 h-8 bg-gray-500 rounded-full flex items-center justify-center flex-shrink-0 relative z-10">
+        <div className="w-8 h-8 bg-slate-700 rounded-full flex items-center justify-center flex-shrink-0 relative z-10">
           <svg className="w-4 h-4 text-white" fill="currentColor" viewBox="0 0 20 20">
             <path fillRule="evenodd" d="M12 7a1 1 0 110-2h5a1 1 0 011 1v5a1 1 0 11-2 0V8.414l-4.293 4.293a1 1 0 01-1.414 0L8 10.414l-4.293 4.293a1 1 0 01-1.414-1.414l5-5a1 1 0 011.414 0L11 10.586 14.586 7H12z" clipRule="evenodd" />
           </svg>
         </div>
-        <div className="flex-1 bg-gray-50 dark:bg-gray-900/20 border border-gray-200 dark:border-gray-800 rounded-xl p-6">
+        <div className="flex-1 bg-slate-900  border border-slate-800  rounded-xl p-6">
           <h4 className="font-bold text-gray-800 dark:text-gray-200 mb-2">Priority #3: Begin Investing (Month 6+)</h4>
-          <p className="text-gray-700 dark:text-gray-300">Start with broad market index funds, then gradually learn individual stock analysis</p>
+          <p className="text-slate-300 ">Start with broad market index funds, then gradually learn individual stock analysis</p>
         </div>
       </div>
     </div>
@@ -203,57 +244,352 @@ icon: 'chart-line'
 ## Risk vs Return Spectrum
 
 <div className="my-8">
-  <div className="bg-gradient-to-r bg-gray-50 dark:bg-gray-900/20 p-8 rounded-xl border border-slate-200 dark:border-slate-700">
+  <div className="bg-gradient-to-r bg-slate-900  p-8 rounded-xl border border-slate-200 ">
     <h3 className="text-center font-bold text-xl text-slate-800 dark:text-slate-200 mb-6">Investment Risk-Return Profile</h3>
 
     <div className="flex justify-between items-end h-40 mb-6">
       <div className="text-center group">
         <div className="w-16 h-10 bg-gradient-to-t from-emerald-600 to-emerald-400 rounded-t mb-2 group-hover:scale-105 transition-transform shadow-lg"></div>
-        <div className="text-xs font-semibold text-slate-700 dark:text-slate-300">Savings<br/>1-2%</div>
+        <div className="text-xs font-semibold text-slate-700 ">Savings<br/>1-2%</div>
       </div>
       <div className="text-center group">
         <div className="w-16 h-20 bg-gradient-to-t from-blue-600 to-blue-400 rounded-t mb-2 group-hover:scale-105 transition-transform shadow-lg"></div>
-        <div className="text-xs font-semibold text-slate-700 dark:text-slate-300">Bonds<br/>3-5%</div>
+        <div className="text-xs font-semibold text-slate-700 ">Bonds<br/>3-5%</div>
       </div>
       <div className="text-center group">
         <div className="w-16 h-24 bg-gradient-to-t from-purple-600 to-purple-400 rounded-t mb-2 group-hover:scale-105 transition-transform shadow-lg"></div>
-        <div className="text-xs font-semibold text-slate-700 dark:text-slate-300">Dividend Stocks<br/>6-8%</div>
+        <div className="text-xs font-semibold text-slate-700 ">Dividend Stocks<br/>6-8%</div>
       </div>
       <div className="text-center group">
         <div className="w-16 h-28 bg-gradient-to-t from-amber-600 to-amber-400 rounded-t mb-2 group-hover:scale-105 transition-transform shadow-lg"></div>
-        <div className="text-xs font-semibold text-slate-700 dark:text-slate-300">Growth Stocks<br/>8-12%</div>
+        <div className="text-xs font-semibold text-slate-700 ">Growth Stocks<br/>8-12%</div>
       </div>
       <div className="text-center group">
         <div className="w-16 h-40 bg-gradient-to-t from-red-600 to-red-400 rounded-t mb-2 group-hover:scale-105 transition-transform shadow-lg"></div>
-        <div className="text-xs font-semibold text-slate-700 dark:text-slate-300">Individual Stocks<br/>-50% to +100%</div>
+        <div className="text-xs font-semibold text-slate-700 ">Individual Stocks<br/>-50% to +100%</div>
       </div>
     </div>
 
-    <div className="flex justify-between items-center text-sm text-slate-600 dark:text-slate-400">
+    <div className="flex justify-between items-center text-sm text-slate-600 ">
       <span className="flex items-center gap-2">
-        <div className="w-3 h-3 bg-gray-500 rounded-full"></div>
+        <div className="w-3 h-3 bg-slate-700 rounded-full"></div>
         Lower Risk
       </span>
       <span className="flex items-center gap-2">
         Higher Risk
-        <div className="w-3 h-3 bg-gray-500 rounded-full"></div>
+        <div className="w-3 h-3 bg-slate-700 rounded-full"></div>
       </span>
     </div>
   </div>
 </div>
 
-<div className="bg-gray-50 dark:bg-gray-900/20 border border-gray-200 dark:border-gray-800 rounded-xl p-6 my-8">
+<div className="bg-slate-900  border border-slate-800  rounded-xl p-6 my-8">
   <div className="flex items-start gap-4">
-    <div className="w-8 h-8 bg-gray-500 rounded-full flex items-center justify-center flex-shrink-0">
+    <div className="w-8 h-8 bg-slate-700 rounded-full flex items-center justify-center flex-shrink-0">
       <svg className="w-4 h-4 text-white" fill="currentColor" viewBox="0 0 20 20">
         <path fillRule="evenodd" d="M8.257 3.099c.765-1.36 2.722-1.36 3.486 0l5.58 9.92c.75 1.334-.213 2.98-1.742 2.98H4.42c-1.53 0-2.493-1.646-1.743-2.98l5.58-9.92zM11 13a1 1 0 11-2 0 1 1 0 012 0zm-1-8a1 1 0 00-1 1v3a1 1 0 002 0V6a1 1 0 00-1-1z" clipRule="evenodd" />
       </svg>
     </div>
     <div>
       <h4 className="font-semibold text-gray-800 dark:text-gray-200 mb-2">Remember</h4>
-      <p className="text-gray-700 dark:text-gray-300">
+      <p className="text-slate-300 ">
         Higher potential returns always come with higher risk. Never invest more than you can afford to lose.
       </p>
     </div>
   </div>
+</div>
+
+## Economic Indicators: Reading the Market's Vital Signs
+
+<div className="bg-slate-900 p-6 rounded-xl border border-slate-800 mb-8">
+  <h3 className="text-xl font-bold text-slate-100 mb-4">Understanding Economic Data</h3>
+  <p className="text-slate-300 mb-4">
+    Economic indicators are statistical measures that provide insights into the overall health and direction of the economy. These data points influence investor sentiment, corporate earnings expectations, and ultimately, stock prices.
+  </p>
+  
+  <div className="bg-slate-800 p-4 rounded-lg border border-slate-700">
+    <h4 className="text-slate-200 font-semibold mb-2">Why Economic Indicators Matter for Investors</h4>
+    <p className="text-slate-400 text-sm">
+      Markets are forward-looking mechanisms that price in future economic conditions. By understanding key economic indicators, you can anticipate market movements and position your portfolio accordingly. Economic data doesn't just affect individual stocks—it shapes entire market cycles.
+    </p>
+  </div>
+</div>
+
+<div className="grid grid-cols-1 md:grid-cols-3 gap-6 my-8">
+  <div className="bg-slate-900 p-6 rounded-xl border border-slate-800">
+    <div className="flex items-center gap-3 mb-4">
+      <div className="w-10 h-10 bg-slate-700 rounded-lg flex items-center justify-center">
+        <Icon icon="arrow-up" size={20} className="text-green-400" />
+      </div>
+      <h4 className="font-bold text-slate-100">Leading Indicators</h4>
+    </div>
+    <div className="space-y-3 text-sm">
+      <p className="text-slate-300">Predict future economic activity and market direction</p>
+      <div className="space-y-2">
+        <div className="bg-slate-800 p-3 rounded-lg border border-slate-700">
+          <h5 className="text-slate-200 font-medium">Stock Market Performance</h5>
+          <p className="text-slate-400 text-xs">Markets often anticipate economic changes 6-9 months ahead</p>
+        </div>
+        <div className="bg-slate-800 p-3 rounded-lg border border-slate-700">
+          <h5 className="text-slate-200 font-medium">Consumer Confidence</h5>
+          <p className="text-slate-400 text-xs">High confidence leads to increased spending and economic growth</p>
+        </div>
+        <div className="bg-slate-800 p-3 rounded-lg border border-slate-700">
+          <h5 className="text-slate-200 font-medium">Building Permits</h5>
+          <p className="text-slate-400 text-xs">Construction activity predicts future economic expansion</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div className="bg-slate-900 p-6 rounded-xl border border-slate-800">
+    <div className="flex items-center gap-3 mb-4">
+      <div className="w-10 h-10 bg-slate-700 rounded-lg flex items-center justify-center">
+        <Icon icon="activity" size={20} className="text-blue-400" />
+      </div>
+      <h4 className="font-bold text-slate-100">Coincident Indicators</h4>
+    </div>
+    <div className="space-y-3 text-sm">
+      <p className="text-slate-300">Reflect current state of economic activity</p>
+      <div className="space-y-2">
+        <div className="bg-slate-800 p-3 rounded-lg border border-slate-700">
+          <h5 className="text-slate-200 font-medium">GDP Growth</h5>
+          <p className="text-slate-400 text-xs">Measures total economic output and health</p>
+        </div>
+        <div className="bg-slate-800 p-3 rounded-lg border border-slate-700">
+          <h5 className="text-slate-200 font-medium">Employment Data</h5>
+          <p className="text-slate-400 text-xs">Jobs numbers reflect current economic strength</p>
+        </div>
+        <div className="bg-slate-800 p-3 rounded-lg border border-slate-700">
+          <h5 className="text-slate-200 font-medium">Industrial Production</h5>
+          <p className="text-slate-400 text-xs">Manufacturing output indicates economic momentum</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div className="bg-slate-900 p-6 rounded-xl border border-slate-800">
+    <div className="flex items-center gap-3 mb-4">
+      <div className="w-10 h-10 bg-slate-700 rounded-lg flex items-center justify-center">
+        <Icon icon="arrow-down" size={20} className="text-amber-400" />
+      </div>
+      <h4 className="font-bold text-slate-100">Lagging Indicators</h4>
+    </div>
+    <div className="space-y-3 text-sm">
+      <p className="text-slate-300">Confirm trends that have already begun</p>
+      <div className="space-y-2">
+        <div className="bg-slate-800 p-3 rounded-lg border border-slate-700">
+          <h5 className="text-slate-200 font-medium">Unemployment Rate</h5>
+          <p className="text-slate-400 text-xs">Changes after economic shifts have occurred</p>
+        </div>
+        <div className="bg-slate-800 p-3 rounded-lg border border-slate-700">
+          <h5 className="text-slate-200 font-medium">Corporate Profits</h5>
+          <p className="text-slate-400 text-xs">Earnings reflect past economic conditions</p>
+        </div>
+        <div className="bg-slate-800 p-3 rounded-lg border border-slate-700">
+          <h5 className="text-slate-200 font-medium">Inflation Rate (CPI)</h5>
+          <p className="text-slate-400 text-xs">Price changes follow economic trends</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+## Market Cycles: Understanding the Rhythm of Markets
+
+<div className="bg-slate-900 p-6 rounded-xl border border-slate-800 mb-8">
+  <h3 className="text-xl font-bold text-slate-100 mb-4">The Four Phases of Market Cycles</h3>
+  <p className="text-slate-300 mb-6">
+    Markets don't move in straight lines—they follow predictable cycles driven by economic conditions, investor psychology, and monetary policy. Understanding these cycles helps you make better investment timing decisions and manage risk appropriately.
+  </p>
+  
+  <div className="grid grid-cols-1 md:grid-cols-2 gap-6">
+    <div className="space-y-4">
+      <div className="bg-slate-800 p-4 rounded-lg border border-slate-700">
+        <h4 className="text-green-400 font-semibold mb-2 flex items-center gap-2">
+          <Icon icon="seedling" size={16} />
+          1. Accumulation Phase
+        </h4>
+        <div className="space-y-2 text-sm">
+          <p className="text-slate-300"><strong>Characteristics:</strong> Market bottoming, high pessimism, low valuations</p>
+          <p className="text-slate-400"><strong>Smart Money:</strong> Institutional investors start buying quality assets</p>
+          <p className="text-slate-400"><strong>Duration:</strong> 3-12 months typically</p>
+          <p className="text-slate-400"><strong>Strategy:</strong> Begin accumulating positions in quality companies</p>
+        </div>
+      </div>
+      
+      <div className="bg-slate-800 p-4 rounded-lg border border-slate-700">
+        <h4 className="text-blue-400 font-semibold mb-2 flex items-center gap-2">
+          <Icon icon="trending-up" size={16} />
+          2. Markup Phase
+        </h4>
+        <div className="space-y-2 text-sm">
+          <p className="text-slate-300"><strong>Characteristics:</strong> Rising prices, improving sentiment, expanding valuations</p>
+          <p className="text-slate-400"><strong>Public Entry:</strong> Retail investors start participating</p>
+          <p className="text-slate-400"><strong>Duration:</strong> 1-3 years in major cycles</p>
+          <p className="text-slate-400"><strong>Strategy:</strong> Hold positions, avoid over-trading</p>
+        </div>
+      </div>
+    </div>
+    
+    <div className="space-y-4">
+      <div className="bg-slate-800 p-4 rounded-lg border border-slate-700">
+        <h4 className="text-amber-400 font-semibold mb-2 flex items-center gap-2">
+          <Icon icon="pause" size={16} />
+          3. Distribution Phase
+        </h4>
+        <div className="space-y-2 text-sm">
+          <p className="text-slate-300"><strong>Characteristics:</strong> Market topping, euphoria, stretched valuations</p>
+          <p className="text-slate-400"><strong>Smart Money:</strong> Institutions start selling to retail investors</p>
+          <p className="text-slate-400"><strong>Duration:</strong> 3-18 months typically</p>
+          <p className="text-slate-400"><strong>Strategy:</strong> Begin taking profits, increase cash positions</p>
+        </div>
+      </div>
+      
+      <div className="bg-slate-800 p-4 rounded-lg border border-slate-700">
+        <h4 className="text-red-400 font-semibold mb-2 flex items-center gap-2">
+          <Icon icon="trending-down" size={16} />
+          4. Decline Phase
+        </h4>
+        <div className="space-y-2 text-sm">
+          <p className="text-slate-300"><strong>Characteristics:</strong> Falling prices, panic selling, fear dominates</p>
+          <p className="text-slate-400"><strong>Public Exit:</strong> Retail investors sell at the worst times</p>
+          <p className="text-slate-400"><strong>Duration:</strong> 6 months to 2 years</p>
+          <p className="text-slate-400"><strong>Strategy:</strong> Preserve capital, prepare for next cycle</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+## Investment Psychology: Mastering Your Emotions
+
+<div className="bg-slate-900 p-6 rounded-xl border border-slate-800 mb-8">
+  <h3 className="text-xl font-bold text-slate-100 mb-4">The Psychology of Market Movements</h3>
+  <p className="text-slate-300 mb-6">
+    Markets are driven by human emotions—fear and greed being the primary forces. Understanding market psychology helps you avoid common behavioral traps that destroy wealth and instead position yourself to benefit from others' emotional mistakes.
+  </p>
+  
+  <div className="grid grid-cols-1 md:grid-cols-2 gap-6">
+    <div className="bg-slate-800 p-4 rounded-lg border border-slate-700">
+      <h4 className="text-red-400 font-semibold mb-3">Common Psychological Traps</h4>
+      <div className="space-y-3 text-sm">
+        <div>
+          <h5 className="text-slate-200 font-medium">FOMO (Fear of Missing Out)</h5>
+          <p className="text-slate-400">Buying at market tops because "everyone else is making money"</p>
+        </div>
+        <div>
+          <h5 className="text-slate-200 font-medium">Loss Aversion</h5>
+          <p className="text-slate-400">Holding losing positions too long while selling winners too early</p>
+        </div>
+        <div>
+          <h5 className="text-slate-200 font-medium">Herd Mentality</h5>
+          <p className="text-slate-400">Following the crowd instead of independent analysis</p>
+        </div>
+        <div>
+          <h5 className="text-slate-200 font-medium">Confirmation Bias</h5>
+          <p className="text-slate-400">Only seeking information that confirms existing beliefs</p>
+        </div>
+      </div>
+    </div>
+    
+    <div className="bg-slate-800 p-4 rounded-lg border border-slate-700">
+      <h4 className="text-green-400 font-semibold mb-3">Successful Investor Mindset</h4>
+      <div className="space-y-3 text-sm">
+        <div>
+          <h5 className="text-slate-200 font-medium">Contrarian Thinking</h5>
+          <p className="text-slate-400">"Be fearful when others are greedy, greedy when others are fearful"</p>
+        </div>
+        <div>
+          <h5 className="text-slate-200 font-medium">Long-term Focus</h5>
+          <p className="text-slate-400">Making decisions based on years, not days or weeks</p>
+        </div>
+        <div>
+          <h5 className="text-slate-200 font-medium">Emotional Discipline</h5>
+          <p className="text-slate-400">Sticking to your investment plan regardless of market noise</p>
+        </div>
+        <div>
+          <h5 className="text-slate-200 font-medium">Continuous Learning</h5>
+          <p className="text-slate-400">Adapting strategies based on new information and experience</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+## Building Your Market Fundamentals Knowledge
+
+<div className="grid grid-cols-1 md:grid-cols-2 gap-6 my-8">
+  <div className="bg-slate-900 p-6 rounded-xl border border-slate-800 hover:border-slate-700 transition-colors">
+    <div className="flex items-center gap-3 mb-4">
+      <div className="w-10 h-10 bg-slate-700 rounded-lg flex items-center justify-center">
+        <Icon icon="book-open" size={20} className="text-white" />
+      </div>
+      <h4 className="font-bold text-slate-100">Continue Learning</h4>
+    </div>
+    <p className="text-slate-300 text-sm mb-4">
+      Deepen your understanding of financial analysis and company evaluation techniques.
+    </p>
+    <a href="/trading/company-kpis" className="text-blue-400 text-sm hover:text-blue-300">
+      Master Financial KPIs →
+    </a>
+  </div>
+
+  <div className="bg-slate-900 p-6 rounded-xl border border-slate-800 hover:border-slate-700 transition-colors">
+    <div className="flex items-center gap-3 mb-4">
+      <div className="w-10 h-10 bg-slate-700 rounded-lg flex items-center justify-center">
+        <Icon icon="trending-up" size={20} className="text-white" />
+      </div>
+      <h4 className="font-bold text-slate-100">Apply Your Knowledge</h4>
+    </div>
+    <p className="text-slate-300 text-sm mb-4">
+      Learn how to combine fundamental and technical analysis for better investment decisions.
+    </p>
+    <a href="/trading/analysis/fundamental-analysis" className="text-blue-400 text-sm hover:text-blue-300">
+      Study Analysis Methods →
+    </a>
+  </div>
+
+  <div className="bg-slate-900 p-6 rounded-xl border border-slate-800 hover:border-slate-700 transition-colors">
+    <div className="flex items-center gap-3 mb-4">
+      <div className="w-10 h-10 bg-slate-700 rounded-lg flex items-center justify-center">
+        <Icon icon="shield-check" size={20} className="text-white" />
+      </div>
+      <h4 className="font-bold text-slate-100">Manage Risk</h4>
+    </div>
+    <p className="text-slate-300 text-sm mb-4">
+      Understand how to protect your capital through proper risk management techniques.
+    </p>
+    <a href="/trading/fundamentals/risk-management" className="text-blue-400 text-sm hover:text-blue-300">
+      Learn Risk Management →
+    </a>
+  </div>
+
+  <div className="bg-slate-900 p-6 rounded-xl border border-slate-800 hover:border-slate-700 transition-colors">
+    <div className="flex items-center gap-3 mb-4">
+      <div className="w-10 h-10 bg-slate-700 rounded-lg flex items-center justify-center">
+        <Icon icon="globe" size={20} className="text-white" />
+      </div>
+      <h4 className="font-bold text-slate-100">Explore Markets</h4>
+    </div>
+    <p className="text-slate-300 text-sm mb-4">
+      Discover different market structures and how they affect your investment strategy.
+    </p>
+    <a href="/trading/markets/us-markets" className="text-blue-400 text-sm hover:text-blue-300">
+      Understand Market Structure →
+    </a>
+  </div>
+</div>
+
+<div className="bg-slate-800 p-6 rounded-xl border border-slate-700 my-8">
+  <div className="flex items-center gap-3 mb-4">
+    <Icon icon="lightbulb" size={24} className="text-amber-400" />
+    <h3 className="text-xl font-bold text-slate-100">Key Takeaway</h3>
+  </div>
+  <p className="text-slate-300 mb-4">
+    Market fundamentals provide the foundation for all successful investing. By understanding economic indicators, market cycles, and investor psychology, you can make informed decisions that align with long-term market realities rather than short-term emotions.
+  </p>
+  <p className="text-slate-400 text-sm">
+    Remember: Markets can remain irrational longer than you can remain solvent. Always invest with a long-term perspective, proper risk management, and a clear understanding of your own psychological biases.
+  </p>
 </div>
