--- a/trading/portfolios-and-assets.mdx
+++ b/trading/portfolios-and-assets.mdx
@@ -1,42 +1,94 @@
 ---
-title: 'Portfolios and Assets'
-description: 'Complete guide to building, managing, and optimizing investment portfolios across different asset classes'
+title: 'Portfolio Construction & Asset Management'
+description: 'Master the art of building, managing, and optimizing investment portfolios across different asset classes for long-term wealth creation'
 icon: 'briefcase'
 ---
 
-<div className="flex items-center gap-2 mb-6 text-sm text-gray-600">
+<div className="flex items-center gap-2 mb-6 text-sm text-slate-500 dark:text-slate-400">
   <Icon icon="clock" size={16} />
-  <span>12 min read</span>
+  <span>25 min read</span>
   <span>•</span>
-  <span>Last updated: July 2025</span>
+  <span>Complete Guide</span>
+  <span>•</span>
+  <span>Last updated: January 2025</span>
 </div>
 
-<Frame>
-  <img
-    className="block dark:hidden"
-    src="/images/portfolio-hero-light.png"
-    alt="Portfolio Management Dashboard"
-  />
-  <img
-    className="hidden dark:block"
-    src="/images/portfolio-hero-dark.png"
-    alt="Portfolio Management Dashboard"
-  />
-</Frame>
+<div className="bg-slate-900 p-8 rounded-xl border border-slate-800 my-8">
+  <div className="flex items-center gap-4 mb-6">
+    <div className="w-12 h-12 bg-slate-700 rounded-xl flex items-center justify-center">
+      <Icon icon="briefcase" size={24} className="text-white" />
+    </div>
+    <div>
+      <h1 className="text-2xl font-bold text-slate-100">Portfolio Construction Mastery</h1>
+      <p className="text-slate-400">Build wealth through strategic asset allocation and risk management</p>
+    </div>
+  </div>
 
-## Portfolio Construction Framework
+  <div className="space-y-4 text-slate-300">
+    <p className="text-lg leading-relaxed">
+      Portfolio construction is the foundation of successful long-term investing. It's not about picking individual winners, but creating a balanced collection of assets that work together to achieve your financial goals while managing risk appropriately.
+    </p>
 
-<CardGroup cols={3}>
-  <Card title="Asset Allocation" icon="pie-chart" color="#6b7280">
-    Strategic distribution of investments across different asset classes to optimize risk-return profile.
-  </Card>
-  <Card title="Diversification" icon="arrows-split" color="#6b7280">
-    Spreading investments to reduce risk while maintaining growth potential across markets and sectors.
-  </Card>
-  <Card title="Risk Management" icon="shield-check" color="#6b7280">
-    Controlling portfolio volatility through position sizing and correlation analysis.
-  </Card>
-</CardGroup>
+    <div className="bg-slate-800 p-4 rounded-lg border border-slate-700">
+      <h4 className="text-slate-200 font-semibold mb-2">Why Portfolio Construction Matters</h4>
+      <p className="text-sm">
+        Studies show that asset allocation—how you distribute your investments across different asset classes—determines 90% of your portfolio's long-term performance. Individual stock selection and market timing matter far less than getting your portfolio structure right.
+      </p>
+    </div>
+  </div>
+</div>
+
+## The Three Pillars of Portfolio Construction
+
+<div className="grid grid-cols-1 md:grid-cols-3 gap-6 my-8">
+  <div className="border border-slate-800 rounded-xl p-6 bg-slate-900">
+    <div className="flex items-center gap-3 mb-4">
+      <div className="w-10 h-10 bg-slate-700 rounded-lg flex items-center justify-center">
+        <Icon icon="pie-chart" size={20} className="text-white" />
+      </div>
+      <h3 className="font-bold text-slate-100">Asset Allocation</h3>
+    </div>
+    <div className="space-y-3 text-sm">
+      <p className="text-slate-300">Strategic distribution of investments across different asset classes to optimize your risk-return profile based on your goals and time horizon.</p>
+      <div className="bg-slate-800 p-3 rounded-lg border border-slate-700">
+        <h4 className="text-slate-200 font-semibold mb-1">Key Principle</h4>
+        <p className="text-slate-400 text-xs">Don't put all your eggs in one basket. Diversify across asset classes that respond differently to economic conditions.</p>
+      </div>
+    </div>
+  </div>
+
+  <div className="border border-slate-800 rounded-xl p-6 bg-slate-900">
+    <div className="flex items-center gap-3 mb-4">
+      <div className="w-10 h-10 bg-slate-700 rounded-lg flex items-center justify-center">
+        <Icon icon="arrows-split" size={20} className="text-white" />
+      </div>
+      <h3 className="font-bold text-slate-100">Diversification</h3>
+    </div>
+    <div className="space-y-3 text-sm">
+      <p className="text-slate-300">Spreading investments across different markets, sectors, and geographies to reduce risk while maintaining growth potential.</p>
+      <div className="bg-slate-800 p-3 rounded-lg border border-slate-700">
+        <h4 className="text-slate-200 font-semibold mb-1">Key Principle</h4>
+        <p className="text-slate-400 text-xs">True diversification means some of your investments should always be underperforming. If everything moves together, you're not diversified.</p>
+      </div>
+    </div>
+  </div>
+
+  <div className="border border-slate-800 rounded-xl p-6 bg-slate-900">
+    <div className="flex items-center gap-3 mb-4">
+      <div className="w-10 h-10 bg-slate-700 rounded-lg flex items-center justify-center">
+        <Icon icon="shield-check" size={20} className="text-white" />
+      </div>
+      <h3 className="font-bold text-slate-100">Risk Management</h3>
+    </div>
+    <div className="space-y-3 text-sm">
+      <p className="text-slate-300">Controlling portfolio volatility through position sizing, correlation analysis, and systematic rebalancing.</p>
+      <div className="bg-slate-800 p-3 rounded-lg border border-slate-700">
+        <h4 className="text-slate-200 font-semibold mb-1">Key Principle</h4>
+        <p className="text-slate-400 text-xs">Risk and return are joined at the hip. The goal isn't to eliminate risk, but to take the right risks for your situation.</p>
+      </div>
+    </div>
+  </div>
+</div>
 
 ## Asset Classes Overview
 
@@ -44,24 +96,24 @@ icon: 'briefcase'
   <Tab title="Equities (Stocks)">
     <div className="space-y-4">
       <div className="grid grid-cols-2 md:grid-cols-4 gap-4">
-        <div className="bg-gray-50 p-4 rounded-lg text-center">
-          <div className="text-2xl font-bold text-gray-600">Large Cap</div>
-          <div className="text-sm text-gray-600">$10B+ Market Cap</div>
+        <div className="bg-blue-50 p-4 rounded-lg text-center">
+          <div className="text-2xl font-bold text-blue-600">Large Cap</div>
+          <div className="text-sm text-slate-500 dark:text-slate-400">$10B+ Market Cap</div>
           <div className="text-xs mt-2">Lower Risk, Stable</div>
         </div>
-        <div className="bg-gray-50 p-4 rounded-lg text-center">
-          <div className="text-2xl font-bold text-gray-600">Mid Cap</div>
-          <div className="text-sm text-gray-600">$2B-$10B</div>
+        <div className="bg-green-50 p-4 rounded-lg text-center">
+          <div className="text-2xl font-bold text-green-600">Mid Cap</div>
+          <div className="text-sm text-slate-500 dark:text-slate-400">$2B-$10B</div>
           <div className="text-xs mt-2">Balanced Growth</div>
         </div>
-        <div className="bg-gray-50 p-4 rounded-lg text-center">
-          <div className="text-2xl font-bold text-gray-600">Small Cap</div>
-          <div className="text-sm text-gray-600">$300M-$2B</div>
+        <div className="bg-orange-50 p-4 rounded-lg text-center">
+          <div className="text-2xl font-bold text-orange-600">Small Cap</div>
+          <div className="text-sm text-slate-500 dark:text-slate-400">$300M-$2B</div>
           <div className="text-xs mt-2">Higher Growth Potential</div>
         </div>
-        <div className="bg-gray-50 p-4 rounded-lg text-center">
-          <div className="text-2xl font-bold text-gray-600">Micro Cap</div>
-          <div className="text-sm text-gray-600">&lt;$300M</div>
+        <div className="bg-purple-50 p-4 rounded-lg text-center">
+          <div className="text-2xl font-bold text-purple-600">Micro Cap</div>
+          <div className="text-sm text-slate-500 dark:text-slate-400">&lt;$300M</div>
           <div className="text-xs mt-2">Highest Risk/Reward</div>
         </div>
       </div>
@@ -82,7 +134,7 @@ icon: 'briefcase'
 
       <div className="grid grid-cols-1 md:grid-cols-2 gap-4">
         <div className="border rounded-lg p-4">
-          <h4 className="font-bold text-gray-700 mb-3"> Government Bonds</h4>
+          <h4 className="font-bold text-green-700 mb-3">Government Bonds</h4>
           <div className="space-y-2 text-sm">
             <div className="flex justify-between">
               <span>10-Year Treasury:</span>
@@ -100,7 +152,7 @@ icon: 'briefcase'
         </div>
 
         <div className="border rounded-lg p-4">
-          <h4 className="font-bold text-gray-700 mb-3">Corporate Bonds</h4>
+          <h4 className="font-bold text-blue-700 mb-3">🏢 Corporate Bonds</h4>
           <div className="space-y-2 text-sm">
             <div className="flex justify-between">
               <span>Investment Grade:</span>
@@ -129,50 +181,50 @@ icon: 'briefcase'
     </div>
   </Tab>
 
-  <Tab title="Real Estate (REITs)">
+  <Tab title="🏠 Real Estate (REITs)">
     <div className="space-y-4">
       **REIT Sector Breakdown**
 
       <div className="grid grid-cols-2 md:grid-cols-3 gap-3">
-        <div className="bg-gray-50">
-          <div className="font-bold">Commercial</div>
+        <div className="bg-gradient-to-br from-blue-100 to-blue-200 p-3 rounded-lg">
+          <div className="font-bold">🏢 Commercial</div>
           <div className="text-sm">Office Buildings</div>
-          <div className="text-xs text-gray-700">Yield: 6.2%</div>
+          <div className="text-xs text-blue-700">Yield: 6.2%</div>
         </div>
-        <div className="bg-gray-50">
+        <div className="bg-gradient-to-br from-green-100 to-green-200 p-3 rounded-lg">
           <div className="font-bold">Residential</div>
           <div className="text-sm">Apartments</div>
-          <div className="text-xs text-gray-700">Yield: 4.8%</div>
+          <div className="text-xs text-green-700">Yield: 4.8%</div>
         </div>
-        <div className="bg-gray-50">
-          <div className="font-bold">Retail</div>
+        <div className="bg-gradient-to-br from-purple-100 to-purple-200 p-3 rounded-lg">
+          <div className="font-bold">🏪 Retail</div>
           <div className="text-sm">Shopping Centers</div>
-          <div className="text-xs text-gray-700">Yield: 5.4%</div>
+          <div className="text-xs text-purple-700">Yield: 5.4%</div>
         </div>
-        <div className="bg-gray-50">
-          <div className="font-bold">Industrial</div>
+        <div className="bg-gradient-to-br from-orange-100 to-orange-200 p-3 rounded-lg">
+          <div className="font-bold">🏭 Industrial</div>
           <div className="text-sm">Warehouses</div>
-          <div className="text-xs text-gray-700">Yield: 5.1%</div>
+          <div className="text-xs text-orange-700">Yield: 5.1%</div>
         </div>
-        <div className="bg-gray-50">
-          <div className="font-bold">Healthcare</div>
+        <div className="bg-gradient-to-br from-red-100 to-red-200 p-3 rounded-lg">
+          <div className="font-bold">🏥 Healthcare</div>
           <div className="text-sm">Hospitals</div>
-          <div className="text-xs text-gray-700">Yield: 5.7%</div>
+          <div className="text-xs text-red-700">Yield: 5.7%</div>
         </div>
-        <div className="bg-gray-50">
+        <div className="bg-gradient-to-br from-teal-100 to-teal-200 p-3 rounded-lg">
           <div className="font-bold">💾 Data Centers</div>
           <div className="text-sm">Tech Infrastructure</div>
-          <div className="text-xs text-gray-700">Yield: 3.9%</div>
+          <div className="text-xs text-teal-700">Yield: 3.9%</div>
         </div>
       </div>
     </div>
   </Tab>
 
-  <Tab title="Alternative Assets">
+  <Tab title="🌟 Alternative Assets">
     <div className="space-y-4">
       <div className="grid grid-cols-1 md:grid-cols-2 gap-4">
-        <div className="border-2 border-gray-200 rounded-lg p-4">
-          <h4 className="font-bold text-gray-700 mb-2">🥇 Commodities</h4>
+        <div className="border-2 border-yellow-200 rounded-lg p-4">
+          <h4 className="font-bold text-yellow-700 mb-2">🥇 Commodities</h4>
           <div className="space-y-2 text-sm">
             <div className="flex justify-between">
               <span>Gold (1oz):</span>
@@ -193,8 +245,8 @@ icon: 'briefcase'
           </div>
         </div>
 
-        <div className="border-2 border-gray-200 rounded-lg p-4">
-          <h4 className="font-bold text-gray-700 mb-2">₿ Cryptocurrency</h4>
+        <div className="border-2 border-orange-200 rounded-lg p-4">
+          <h4 className="font-bold text-orange-700 mb-2">₿ Cryptocurrency</h4>
           <div className="space-y-2 text-sm">
             <div className="flex justify-between">
               <span>Bitcoin (BTC):</span>
@@ -208,7 +260,7 @@ icon: 'briefcase'
               <span>Market Cap:</span>
               <span className="font-semibold">$2.1T</span>
             </div>
-            <div className="text-xs text-gray-600 mt-2">
+            <div className="text-xs text-orange-600 mt-2">
               Highly volatile - limit to 5-10% of portfolio
             </div>
           </div>
@@ -226,29 +278,29 @@ icon: 'briefcase'
       **Rule of Thumb: 100 - Your Age = Stock %**
 
       <div className="space-y-2">
-        <div className="flex items-center justify-between bg-gray-50 p-2 rounded">
+        <div className="flex items-center justify-between bg-blue-50 p-2 rounded">
           <span className="text-sm">Age 25: 75% Stocks, 25% Bonds</span>
           <div className="w-16 h-2 bg-gray-200 rounded">
-            <div className="w-3/4 h-2 bg-gray-500 rounded"></div>
+            <div className="w-3/4 h-2 bg-blue-500 rounded"></div>
           </div>
         </div>
-        <div className="flex items-center justify-between bg-gray-50 p-2 rounded">
+        <div className="flex items-center justify-between bg-green-50 p-2 rounded">
           <span className="text-sm">Age 40: 60% Stocks, 40% Bonds</span>
           <div className="w-16 h-2 bg-gray-200 rounded">
-            <div className="w-3/5 h-2 bg-gray-500 rounded"></div>
+            <div className="w-3/5 h-2 bg-green-500 rounded"></div>
           </div>
         </div>
-        <div className="flex items-center justify-between bg-gray-50 p-2 rounded">
+        <div className="flex items-center justify-between bg-orange-50 p-2 rounded">
           <span className="text-sm">Age 65: 35% Stocks, 65% Bonds</span>
           <div className="w-16 h-2 bg-gray-200 rounded">
-            <div className="w-1/3 h-2 bg-gray-500 rounded"></div>
+            <div className="w-1/3 h-2 bg-orange-500 rounded"></div>
           </div>
         </div>
       </div>
     </div>
   </Card>
 
-  <Card title="Model Portfolios" icon="trophy">
+  <Card title="🏆 Model Portfolios" icon="trophy">
     <Tabs>
       <Tab title="Conservative">
         <div className="space-y-2">
@@ -261,10 +313,10 @@ icon: 'briefcase'
             <span className="font-semibold">30%</span>
           </div>
           <div className="flex justify-between text-sm">
-            <span>REITs</span>
+            <span>🏠 REITs</span>
             <span className="font-semibold">10%</span>
           </div>
-          <div className="text-xs text-gray-600 mt-2">
+          <div className="text-xs text-slate-500 dark:text-slate-400 mt-2">
             Expected Return: 6-7% | Risk: Low
           </div>
         </div>
@@ -281,14 +333,14 @@ icon: 'briefcase'
             <span className="font-semibold">30%</span>
           </div>
           <div className="flex justify-between text-sm">
-            <span>REITs</span>
+            <span>🏠 REITs</span>
             <span className="font-semibold">7%</span>
           </div>
           <div className="flex justify-between text-sm">
-            <span>Commodities</span>
+            <span>🥇 Commodities</span>
             <span className="font-semibold">3%</span>
           </div>
-          <div className="text-xs text-gray-600 mt-2">
+          <div className="text-xs text-slate-500 dark:text-slate-400 mt-2">
             Expected Return: 8-9% | Risk: Medium
           </div>
         </div>
@@ -301,7 +353,7 @@ icon: 'briefcase'
             <span className="font-semibold">70%</span>
           </div>
           <div className="flex justify-between text-sm">
-            <span>International</span>
+            <span>🌍 International</span>
             <span className="font-semibold">15%</span>
           </div>
           <div className="flex justify-between text-sm">
@@ -309,10 +361,10 @@ icon: 'briefcase'
             <span className="font-semibold">10%</span>
           </div>
           <div className="flex justify-between text-sm">
-            <span>Alternatives</span>
+            <span>🌟 Alternatives</span>
             <span className="font-semibold">5%</span>
           </div>
-          <div className="text-xs text-gray-600 mt-2">
+          <div className="text-xs text-slate-500 dark:text-slate-400 mt-2">
             Expected Return: 10-12% | Risk: High
           </div>
         </div>
@@ -337,9 +389,9 @@ icon: 'briefcase'
     </thead>
     <tbody>
       <tr>
-        <td className="border border-gray-300 p-3">Cash/Money Market</td>
+        <td className="border border-gray-300 p-3">💵 Cash/Money Market</td>
         <td className="border border-gray-300 p-3 text-center">
-          <span className="bg-gray-100 text-gray-800 px-2 py-1 rounded text-xs">LOW</span>
+          <span className="bg-green-100 text-green-800 px-2 py-1 rounded text-xs">LOW</span>
         </td>
         <td className="border border-gray-300 p-3 text-center">3-5%</td>
         <td className="border border-gray-300 p-3 text-center">Minimal</td>
@@ -347,9 +399,9 @@ icon: 'briefcase'
         <td className="border border-gray-300 p-3 text-center">Poor</td>
       </tr>
       <tr className="bg-gray-50">
-        <td className="border border-gray-300 p-3">🏛️ Government Bonds</td>
+        <td className="border border-gray-300 p-3">Government Bonds</td>
         <td className="border border-gray-300 p-3 text-center">
-          <span className="bg-gray-100 text-gray-800 px-2 py-1 rounded text-xs">LOW</span>
+          <span className="bg-green-100 text-green-800 px-2 py-1 rounded text-xs">LOW</span>
         </td>
         <td className="border border-gray-300 p-3 text-center">4-6%</td>
         <td className="border border-gray-300 p-3 text-center">Low</td>
@@ -357,9 +409,9 @@ icon: 'briefcase'
         <td className="border border-gray-300 p-3 text-center">Poor</td>
       </tr>
       <tr>
-        <td className="border border-gray-300 p-3"> Corporate Bonds</td>
+        <td className="border border-gray-300 p-3">🏢 Corporate Bonds</td>
         <td className="border border-gray-300 p-3 text-center">
-          <span className="bg-gray-100 text-gray-800 px-2 py-1 rounded text-xs">MED</span>
+          <span className="bg-yellow-100 text-yellow-800 px-2 py-1 rounded text-xs">MED</span>
         </td>
         <td className="border border-gray-300 p-3 text-center">5-8%</td>
         <td className="border border-gray-300 p-3 text-center">Medium</td>
@@ -367,9 +419,9 @@ icon: 'briefcase'
         <td className="border border-gray-300 p-3 text-center">Fair</td>
       </tr>
       <tr className="bg-gray-50">
-        <td className="border border-gray-300 p-3"> Large Cap Stocks</td>
+        <td className="border border-gray-300 p-3">Large Cap Stocks</td>
         <td className="border border-gray-300 p-3 text-center">
-          <span className="bg-gray-100 text-gray-800 px-2 py-1 rounded text-xs">MED</span>
+          <span className="bg-yellow-100 text-yellow-800 px-2 py-1 rounded text-xs">MED</span>
         </td>
         <td className="border border-gray-300 p-3 text-center">8-12%</td>
         <td className="border border-gray-300 p-3 text-center">Medium</td>
@@ -377,9 +429,9 @@ icon: 'briefcase'
         <td className="border border-gray-300 p-3 text-center">Good</td>
       </tr>
       <tr>
-        <td className="border border-gray-300 p-3"> Small Cap Stocks</td>
+        <td className="border border-gray-300 p-3">🚀 Small Cap Stocks</td>
         <td className="border border-gray-300 p-3 text-center">
-          <span className="bg-gray-100 text-gray-800 px-2 py-1 rounded text-xs">HIGH</span>
+          <span className="bg-red-100 text-red-800 px-2 py-1 rounded text-xs">HIGH</span>
         </td>
         <td className="border border-gray-300 p-3 text-center">10-15%</td>
         <td className="border border-gray-300 p-3 text-center">High</td>
@@ -389,7 +441,7 @@ icon: 'briefcase'
       <tr className="bg-gray-50">
         <td className="border border-gray-300 p-3">🏠 REITs</td>
         <td className="border border-gray-300 p-3 text-center">
-          <span className="bg-gray-100 text-gray-800 px-2 py-1 rounded text-xs">MED</span>
+          <span className="bg-yellow-100 text-yellow-800 px-2 py-1 rounded text-xs">MED</span>
         </td>
         <td className="border border-gray-300 p-3 text-center">6-10%</td>
         <td className="border border-gray-300 p-3 text-center">Medium</td>
@@ -399,7 +451,7 @@ icon: 'briefcase'
       <tr>
         <td className="border border-gray-300 p-3">₿ Cryptocurrency</td>
         <td className="border border-gray-300 p-3 text-center">
-          <span className="bg-gray-100 text-gray-800 px-2 py-1 rounded text-xs">EXTREME</span>
+          <span className="bg-red-100 text-red-800 px-2 py-1 rounded text-xs">EXTREME</span>
         </td>
         <td className="border border-gray-300 p-3 text-center">-50% to +200%</td>
         <td className="border border-gray-300 p-3 text-center">Extreme</td>
@@ -414,9 +466,9 @@ icon: 'briefcase'
 
 <Steps>
   <Step title="📅 Calendar Rebalancing" icon="calendar">
-    <div className="bg-gray-50 border border-gray-200 p-4 rounded-lg">
-      <h4 className="font-semibold text-gray-800">Time-Based Approach</h4>
-      <p className="text-gray-700 mt-2">Rebalance portfolio at fixed intervals regardless of market movements.</p>
+    <div className="bg-blue-50 border border-blue-200 p-4 rounded-lg">
+      <h4 className="font-semibold text-blue-800">Time-Based Approach</h4>
+      <p className="text-blue-700 mt-2">Rebalance portfolio at fixed intervals regardless of market movements.</p>
       <div className="mt-3 space-y-2 text-sm">
         <div><strong>Quarterly:</strong> For active investors with high conviction</div>
         <div><strong>Semi-Annual:</strong> Most common approach for retail investors</div>
@@ -425,10 +477,10 @@ icon: 'briefcase'
     </div>
   </Step>
 
-  <Step title=" Threshold Rebalancing" icon="bullseye">
-    <div className="bg-gray-50 border border-gray-200 p-4 rounded-lg">
-      <h4 className="font-semibold text-gray-800">Deviation-Based Approach</h4>
-      <p className="text-gray-700 mt-2">Rebalance when asset allocation drifts beyond predetermined thresholds.</p>
+  <Step title="Threshold Rebalancing" icon="bullseye">
+    <div className="bg-green-50 border border-green-200 p-4 rounded-lg">
+      <h4 className="font-semibold text-green-800">Deviation-Based Approach</h4>
+      <p className="text-green-700 mt-2">Rebalance when asset allocation drifts beyond predetermined thresholds.</p>
       <div className="mt-3 space-y-2 text-sm">
         <div><strong>5% Rule:</strong> Rebalance when any asset class deviates by 5%</div>
         <div><strong>Example:</strong> 60/40 stocks/bonds → Rebalance if becomes 65/35 or 55/45</div>
@@ -436,10 +488,10 @@ icon: 'briefcase'
     </div>
   </Step>
 
-  <Step title=" Hybrid Approach" icon="arrows-rotate">
-    <div className="bg-gray-50 border border-gray-200 p-4 rounded-lg">
-      <h4 className="font-semibold text-gray-800">Combined Strategy</h4>
-      <p className="text-gray-700 mt-2">Check quarterly, rebalance only if thresholds are breached.</p>
+  <Step title="Hybrid Approach" icon="arrows-rotate">
+    <div className="bg-purple-50 border border-purple-200 p-4 rounded-lg">
+      <h4 className="font-semibold text-purple-800">Combined Strategy</h4>
+      <p className="text-purple-700 mt-2">Check quarterly, rebalance only if thresholds are breached.</p>
       <div className="mt-3 text-sm">
         Provides discipline while avoiding unnecessary transaction costs.
       </div>
@@ -450,23 +502,23 @@ icon: 'briefcase'
 ## Tax-Efficient Portfolio Management
 
 <CardGroup cols={2}>
-  <Card title=" Tax-Advantaged Accounts" icon="piggy-bank" color="#6b7280">
+  <Card title="🏦 Tax-Advantaged Accounts" icon="piggy-bank" >
     <div className="space-y-3">
       **Account Hierarchy for Asset Placement:**
 
       <div className="space-y-2 text-sm">
-        <div className="bg-gray-100 p-2 rounded">
+        <div className="bg-green-100 p-2 rounded">
           <strong>401(k)/IRA:</strong> Bonds, REITs, High-dividend stocks
         </div>
-        <div className="bg-gray-100 p-2 rounded">
+        <div className="bg-blue-100 p-2 rounded">
           <strong>Roth IRA:</strong> Highest growth potential assets
         </div>
-        <div className="bg-gray-100 p-2 rounded">
+        <div className="bg-orange-100 p-2 rounded">
           <strong>Taxable:</strong> Index funds, tax-efficient ETFs
         </div>
       </div>
 
-      <div className="text-xs text-gray-600 mt-3 p-2 bg-gray-50 rounded">
+      <div className="text-xs text-slate-500 dark:text-slate-400 mt-3 p-2 bg-gray-50 rounded">
         **2025 Contribution Limits:**<br/>
         401(k): $23,500 (+$7,500 catch-up)<br/>
         IRA: $7,000 (+$1,000 catch-up)
@@ -474,7 +526,7 @@ icon: 'briefcase'
     </div>
   </Card>
 
-  <Card title=" Tax Loss Harvesting" icon="chart-line-down" color="#6b7280">
+  <Card title="Tax Loss Harvesting" icon="chart-line-down" color="#ef4444">
     <div className="space-y-3">
       **Strategy Overview:**
 
@@ -485,7 +537,7 @@ icon: 'briefcase'
         <div>4. Avoid wash sale rule (30-day period)</div>
       </div>
 
-      <div className="bg-gray-50 p-3 rounded mt-3">
+      <div className="bg-red-50 p-3 rounded mt-3">
         <div className="text-sm">
           <strong>Example:</strong> Lost $3,000 on Stock A? Sell it, buy similar Stock B, offset $3,000 in gains elsewhere.
         </div>
@@ -497,8 +549,8 @@ icon: 'briefcase'
 ## Dollar-Cost Averaging vs Lump Sum
 
 <div className="grid grid-cols-1 md:grid-cols-2 gap-6 my-8">
-  <div className="border-2 border-gray-200 rounded-lg p-6">
-    <h3 className="text-xl font-bold text-gray-700 mb-4"> Dollar-Cost Averaging (DCA)</h3>
+  <div className="border-2 border-blue-200 rounded-lg p-6">
+    <h3 className="text-xl font-bold text-blue-700 mb-4">Dollar-Cost Averaging (DCA)</h3>
 
     **How it works:**
     <div className="text-sm space-y-2 mb-4">
@@ -512,7 +564,7 @@ icon: 'briefcase'
     <div className="overflow-x-auto">
       <table className="w-full text-xs border-collapse border border-gray-300 mt-2">
         <thead>
-          <tr className="bg-gray-50">
+          <tr className="bg-blue-50">
             <th className="border border-gray-300 p-1">Month</th>
             <th className="border border-gray-300 p-1">Investment</th>
             <th className="border border-gray-300 p-1">Price</th>
@@ -542,14 +594,14 @@ icon: 'briefcase'
       </table>
     </div>
 
-    <div className="bg-gray-50 p-3 rounded mt-3 text-sm">
+    <div className="bg-blue-50 p-3 rounded mt-3 text-sm">
       <strong>Pros:</strong> Reduces timing risk, builds discipline<br/>
       <strong>Cons:</strong> May underperform lump sum in bull markets
     </div>
   </div>
 
-  <div className="border-2 border-gray-200 rounded-lg p-6">
-    <h3 className="text-xl font-bold text-gray-700 mb-4"> Lump Sum Investing</h3>
+  <div className="border-2 border-green-200 rounded-lg p-6">
+    <h3 className="text-xl font-bold text-green-700 mb-4">Lump Sum Investing</h3>
 
     **How it works:**
     <div className="text-sm space-y-2 mb-4">
@@ -563,23 +615,23 @@ icon: 'briefcase'
     <div className="space-y-2 text-sm">
       <div className="flex justify-between">
         <span>Lump sum wins:</span>
-        <span className="font-semibold text-gray-600">68% of time</span>
+        <span className="font-semibold text-green-600">68% of time</span>
       </div>
       <div className="flex justify-between">
         <span>Average outperformance:</span>
-        <span className="font-semibold text-gray-600">2.3% annually</span>
+        <span className="font-semibold text-green-600">2.3% annually</span>
       </div>
       <div className="flex justify-between">
         <span>Best case advantage:</span>
-        <span className="font-semibold text-gray-600">+15.2%</span>
+        <span className="font-semibold text-green-600">+15.2%</span>
       </div>
       <div className="flex justify-between">
         <span>Worst case disadvantage:</span>
-        <span className="font-semibold text-gray-600">-8.7%</span>
+        <span className="font-semibold text-red-600">-8.7%</span>
       </div>
     </div>
 
-    <div className="bg-gray-50 p-3 rounded mt-3 text-sm">
+    <div className="bg-green-50 p-3 rounded mt-3 text-sm">
       <strong>Pros:</strong> Higher expected returns, time in market<br/>
       <strong>Cons:</strong> Timing risk, requires strong nerves
     </div>
@@ -596,36 +648,36 @@ icon: 'briefcase'
   <h3 className="text-xl font-bold mb-4">🌍 Global Market Allocation</h3>
 
   <div className="grid grid-cols-2 md:grid-cols-4 gap-4 mb-6">
-    <div className="text-center p-4 bg-gray-50 rounded-lg border">
-      <div className="text-2xl mb-2"></div>
+    <div className="text-center p-4 bg-blue-50 rounded-lg border">
+      <div className="text-2xl mb-2">🇺🇸</div>
       <div className="font-bold">US Markets</div>
-      <div className="text-sm text-gray-600">50-70%</div>
-      <div className="text-xs text-gray-600">Home bias adjustment</div>
+      <div className="text-sm text-slate-500 dark:text-slate-400">50-70%</div>
+      <div className="text-xs text-blue-600">Home bias adjustment</div>
     </div>
-    <div className="text-center p-4 bg-gray-50 rounded-lg border">
-      <div className="text-2xl mb-2"></div>
+    <div className="text-center p-4 bg-green-50 rounded-lg border">
+      <div className="text-2xl mb-2">🇪🇺</div>
       <div className="font-bold">Developed International</div>
-      <div className="text-sm text-gray-600">15-25%</div>
-      <div className="text-xs text-gray-600">Europe, Japan, Australia</div>
+      <div className="text-sm text-slate-500 dark:text-slate-400">15-25%</div>
+      <div className="text-xs text-green-600">Europe, Japan, Australia</div>
     </div>
-    <div className="text-center p-4 bg-gray-50 rounded-lg border">
+    <div className="text-center p-4 bg-yellow-50 rounded-lg border">
       <div className="text-2xl mb-2">🌏</div>
       <div className="font-bold">Emerging Markets</div>
-      <div className="text-sm text-gray-600">5-15%</div>
-      <div className="text-xs text-gray-600">China, India, Brazil</div>
+      <div className="text-sm text-slate-500 dark:text-slate-400">5-15%</div>
+      <div className="text-xs text-yellow-600">China, India, Brazil</div>
     </div>
-    <div className="text-center p-4 bg-gray-50 rounded-lg border">
+    <div className="text-center p-4 bg-purple-50 rounded-lg border">
       <div className="text-2xl mb-2">🏠</div>
       <div className="font-bold">Frontier/Other</div>
-      <div className="text-sm text-gray-600">0-5%</div>
-      <div className="text-xs text-gray-600">Vietnam, small markets</div>
+      <div className="text-sm text-slate-500 dark:text-slate-400">0-5%</div>
+      <div className="text-xs text-purple-600">Vietnam, small markets</div>
     </div>
   </div>
 
   **Currency Hedging Considerations:**
   <div className="grid grid-cols-1 md:grid-cols-2 gap-4 mt-4">
     <div className="border rounded-lg p-4">
-      <h4 className="font-bold text-gray-700 mb-2">Hedged International</h4>
+      <h4 className="font-bold text-blue-700 mb-2">Hedged International</h4>
       <div className="text-sm space-y-1">
         <div>• Removes currency risk</div>
         <div>• Focus purely on stock performance</div>
@@ -634,7 +686,7 @@ icon: 'briefcase'
       </div>
     </div>
     <div className="border rounded-lg p-4">
-      <h4 className="font-bold text-gray-700 mb-2">Unhedged International</h4>
+      <h4 className="font-bold text-green-700 mb-2">Unhedged International</h4>
       <div className="text-sm space-y-1">
         <div>• Additional diversification from currencies</div>
         <div>• Lower expense ratios</div>
